--- a/partials/inicio.html
+++ b/partials/inicio.html
@@ -6,14 +6,11 @@
                 <h2 class="text-5xl font-['Croissant_One'] font-bold text-[#c31644] drop-shadow-[0_0_8px_white] mb-3">
                     Dulcet repostería </h2>
                 <p class="mb-10 font-['Domine'] text-[#c31644]/90 font-bold drop-shadow-[0_0_2px_white] text-lg">
-                    Postres,
-                    bocaditos y tortas personalizadas
+                    Postres, bocaditos y tortas personalizadas
                 </p>
                 <a href="https://www.instagram.com/dul_cett/"
-                    class="bg-[#ef7a71] text-white px-6 py-3 rounded-lg font-semibold hover:bg-[#c31644] transition">Ver
-                    página
-                    de
-                    Instagram </a>
+                    class="bg-[#ef7a71] text-white px-6 py-3 rounded-lg font-semibold hover:bg-[#c31644] transition">
+                    Ver página de Instagram </a>
             </div>
         </section>
     </div>
